# macroco

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/world3-api/: Cargo.toml
crates/world3-api/src/: error.rs  main.rs  models.rs  state.rs
crates/world3-api/src/routes/: health.rs  mod.rs  params.rs  scenarios.rs  ws.rs
crates/world3-cli/: Cargo.toml
crates/world3-cli/src/: main.rs  plot.rs
crates/world3-core/: Cargo.toml
crates/world3-core/src/: lib.rs  output.rs
crates/world3-core/src/lookup/: mod.rs  table.rs  tables.rs
crates/world3-core/src/model/: derivatives.rs  mod.rs  params.rs  state.rs
crates/world3-core/src/model/sectors/: agriculture.rs  capital.rs  mod.rs  pollution.rs  population.rs  resources.rs
crates/world3-core/src/solver/: mod.rs  rk4.rs  traits.rs
crates/world3-ingestion/: Cargo.toml
crates/world3-ingestion/src/: lib.rs
data/presets/: business_as_usual.json  comprehensive_technology.json  stabilized_world.json
docs/: api-server.md  chart-output.md  cli.md  simulation-engine.md
frontend/: package.json
frontend/src/: app.css
frontend/src/components/: ChartGrid.svelte  ConnectionStatus.svelte  ParameterSlider.svelte  ParameterSliders.svelte  ScenarioBar.svelte  ScenarioSelector.svelte  Sidebar.svelte
frontend/src/lib/: api.ts  types.ts  ws.ts
frontend/src/lib/charts/: TimeSeriesChart.svelte  chart-config.ts
frontend/src/lib/stores/: scenarios.ts  schema.ts  simulation.ts
frontend/src/lib/utils/: extract.ts  format.ts  resize.ts
frontend/src/routes/: +layout.svelte  +page.svelte
