[workspace]
members = [
    "crates/world3-core",
    "crates/world3-api",
    "crates/world3-ingestion",
    "crates/world3-cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for ingestion)
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# CSV parsing
csv = "1"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
