[package]
name = "world3-api"
description = "Axum HTTP + WebSocket server for the World 3 model"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "world3-api"
path = "src/main.rs"

[dependencies]
world3-core = { path = "../world3-core" }
world3-ingestion = { path = "../world3-ingestion" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
