[package]
name = "world3-cli"
description = "CLI for batch World 3 simulation runs and validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "world3-cli"
path = "src/main.rs"

[dependencies]
world3-core = { path = "../world3-core" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "full_palette", "ttf"] }

[dev-dependencies]
tempfile = "3"
